# slambook_notebook

./: .gitignore  README.md
chapter2_pragramming_basic/: CMakeLists.txt  hello_world.cpp  libHelloSLAM.cpp  useHello.cpp
chapter3_motion_in_space/: CMakeLists.txt  eigenMatrix.cpp  useGeometry.cpp
chapter4_so3_se3/: .useSophus.cpp.kate-swp  useSophus.cpp
chapter5_image_camera/: CMakeLists.txt  imageBasics.cpp
chapter5_point_cloud/: CMakeLists.txt  joinMap.cpp
chapter6_nonlinear_optimazation_ceres_g2o/: README.md  ceres_fitting.cpp
chapter6_nonlinear_optimazation_ceres_g2o/ceres/: CMakeLists.txt  ceres_fitting.cpp
chapter6_nonlinear_optimazation_ceres_g2o/g2o/: CMakeLists.txt  g2o_curve_fitting.cpp
chapter7_visual_odometry/: CMakeLists.txt  pose_estimation_2d2d.cpp  triangulation.cpp
chapter9_FrontEnd/version0.1/include/myslam/: camera.h  frame.h
chapter9_FrontEnd/version0.1/src/: camera.cpp  frame.cpp
